# GlCore

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  Readme.md  TestWorld.cpp  main.cpp
Shaders/: DefferedDirectionalLight.frag  DefferedDirectionalLight.vert  DefferedGeometryPass.frag  DefferedGeometryPass.vert  DefferedPointLight.frag  DefferedPointLight.vert  DepthMap.vert  HDRToneMapping.frag  SSRPass.frag  TexturedMesh.frag  TexturedMesh.vert  TexturedMeshUnlit.frag  TexturedMeshUnlit.vert  basic.frag  basic.vert  csm.vert
ext/assimp/lib/: assimpd.exp  assimpd.lib
lib/: GlCore.lib
src/: Camera.cpp  Camera.h  Component.h  Constants.h  Csm.cpp  Csm.h  DefferedRenderer.cpp  DefferedRenderer.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  FrameBuffer.cpp  FrameBuffer.h  Globals.h  Light.h  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Model.cpp  Model.h  Particle.cpp  Particle.h  ParticleManager.cpp  ParticleManager.h  ParticleUpdater.h  Renderable.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  (+12 more)
src/Shaders/: basic.frag
src/utils/: CameraController.cpp  CameraController.h
vs/: GlCore.sln
vs/GlCore/: GlCore.vcxproj  GlCore.vcxproj.filters
